# FLiP-IDS

./: COMPREHENSIVE_EVALUATION_RESULTS.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run_phase1_botiot_batch.py  run_phase2_botiot_final.py  run_phase2_cicids_final.py
apps/: __init__.py  service.py
config/: default.yaml  phase1_features.yaml  phase2_federation.yaml
evaluation_logs/cicids_results/: cicids_evaluation_summary.txt
evaluation_logs/cicids_results/metrics/: cicids_final_metrics.json
evaluation_logs/cicids_results/models/: ct_autoencoder_cicids.pth  global_model_cicids.pth
evaluation_logs/phase2_results/: federated_results.json  final_metrics.json  phase2_evaluation_summary.txt
models/: device_classifier.joblib  iot_classifier.selector.joblib
models/botiot_complete/: feature_scaler.joblib  federated_evaluation.json  label_encoder.joblib  phase1_results.json
models/botiot_complete_phase2_final/: ct_autoencoder.pth  global_model.pth
results/: comprehensive_dataset_comparison.json
results/botiot_complete_final/: phase2_complete_final_results.json
scripts/: demo_phase1.sh  demo_phase2.sh  run_server.sh
src/: __init__.py
src/common/: __init__.py  io.py  logging.py  metrics.py  schemas.py  utils.py
src/phase1_profiling/: __init__.py  api.py  cli.py  datasets.py  feature_extractor.py  pcap_reader.py  selectors.py  train_identifiers.py
src/phase2_ids/: __init__.py  api.py  cli.py  train_federated.py
src/phase2_ids/federation/: __init__.py  client.py  data_pipe.py  data_pipe_cicids.py  data_pipe_toniot.py  server.py
src/phase2_ids/models/: __init__.py  autoencoders.py  cnn_1d.py  (+1 more)
tests/: __init__.py  test_end_to_end.py  test_phase1_features.py  test_phase1_models.py  test_phase2_ctae.py  test_phase2_maml.py
